# genesetGPT

./: .gitignore  README.md  pyproject.toml
data-raw/: generate_example_gene_set.py
notebooks/: contamination-case-study.py  spatial_case_study.py
src/genesetgpt/: __init__.py  datasets.py  entrez.py  geneids.py  hpa.py  llm.py  mim.py  prompt.py  uniprot.py  utils.py
src/genesetgpt/data/: example_gene_set.txt
