[project]
name = "genesetgpt"
version = "0.1.1"
description = "This package allows users to summarize gene sets using LLMs."
readme = "README.md"
authors = [
    { name = "Jack R. Leary", email = "j.leary@ufl.edu" }, 
    { name = "Samantha Pattey", email = "samanthapattey@ufl.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.85",
    "cellrank>=2.0.7",
    "dotenv>=0.9.9",
    "marimo>=0.13.15",
    "openai>=1.86.0",
    "pandarallel>=1.6.5",
    "pybiomart>=0.2.0",
    "python-igraph>=0.11.9",
    "scanpy>=1.11.2",
    "scikit-misc>=0.5.1",
    "session-info>=1.0.1",
    "squidpy>=1.6.5",
    "unipressed>=1.4.0",
    "xmltodict>=0.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
