[project]
name = "genesetgpt"
version = "0.1.1"
description = "This package allows users to summarize gene sets using LLMs."
readme = "README.md"
authors = [
    { name = "Jack R. Leary", email = "j.leary@ufl.edu" }, 
    { name = "Samantha Pattey", email = "samanthapattey@ufl.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.85",
    "curl-cffi>=0.15.0",
    "marimo>=0.18.1",
    "openai>=1.86.0",
    "pandarallel>=1.6.5",
    "pybiomart>=0.2.0",
    "unipressed>=1.4.0",
    "xmltodict>=0.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
