[project]
name = "genesetgpt"
version = "0.1.2"
description = "This package allows users to summarize gene sets using LLMs."
readme = "README.md"
authors = [
    { name = "Jack R. Leary", email = "j.leary@ufl.edu" }, 
    { name = "Samantha Pattey", email = "samanthapattey@ufl.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.104.1",
    "biopython>=1.85",
    "curl-cffi>=0.15.0",
    "marimo>=0.23.8",
    "openai>=1.86.0",
    "pandarallel>=1.6.5",
    "pandas>=3.0.3",
    "psutil>=7.2.2",
    "pybiomart>=0.2.0",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
    "unipressed>=1.4.0",
    "xmltodict>=0.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genesetgpt"]
